# game-of-life3d

./: .gitignore  CMakeLists.txt  Cell.cpp  Cell.h  Generation.cpp  Generation.h  Makefile  README.md  life3d-mpi  life3d-mpi.cpp  life3d-omp.cpp  life3d.cpp  main.cpp
report/: g19omp.tex
serial/: life3d.cpp
tests/: run_tests.py  run_tests2.py  s50e5k2.600.myout
